Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* (T203908) Added language support for Eastern Pwo (kjp).
* (T213717) Fixed a translation error on Goan Konkani (gom-deva) translations
  for NS_TEMPLATE.
* (T212221) Added $digitTransformTable for Santali (sat).
* (T216479) Added language support for Saisiyat (xsy).

=== Breaking changes in 1.33 ===
* The parameteter $lang in DifferenceEngine::setTextLanguage must be of type
  Language. Other types are deprecated since 1.32.
* Skin::doEditSectionLink requires type Language for the parameter $lang.
  The parameters $tooltip and $lang are mandatory. Omitting the parameters is
  deprecated since 1.32.
* Language::truncate(), deprecated in 1.31, has been removed.
* UtfNormal, deprecated in 1.25, was removed. Use UtfNormal\Validator directly
  instead.
* (T197179) In OOUI HTMLForm fields, the parameters 'notice', 'notice-messages',
  and 'notice-message', which were deprecated in 1.32, were removed. Instead,
  use 'help', 'help-message', and 'help-messages'.
* (T197179) HTMLFormField::getNotices(), deprecated in 1.32, was removed.
* The "Parsoid v1" compatibility mappings in ParsoidVirtualRESTService and
  RestbaseVirtualRESTService, deprecated since 1.26, have been removed.
  Use the RESTBase v1 or Parsoid v3 API instead.
* ParserOptions defaults 'tidy' to true now, since the untidy modes of the
  parser are being deprecated and ParserOptions::getCanonicalOverrides()
  has always been true at any rate.
* Support for disabling tidy and external tidy implementations has been removed.
  This was deprecated in 1.32. The pure PHP Remex tidy implementation is now
  used and no configuration is necessary.
* A number of deprecated methods for API documentation, intended for overriding
  by extensions, are no longer called by MediaWiki, and will emit deprecation
  notices if your extension attempts to use them:
  * ApiBase::getDescription() (deprecated in 1.25)